[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://MobSpawnLocation.gd" type="Script" id=3]
[ext_resource path="res://Hud.tscn" type="PackedScene" id=4]
[ext_resource path="res://dodge_assets/bgm/House In a Forest Loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://dodge_assets/sfx/gameover.wav" type="AudioStream" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -484.575, -719.814, 0, 0, 0, 0, -2.50992, -718.267, 0, 0, 0, 0, -6.37881, -3.29291, 0, 0, 0, 0, -485.349, 2.89734, 0, 0, 0, 0, -484.575, -719.814 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( -1.1973, -163.455 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 360 )

[node name="MobPath" type="Path2D" parent="."]
position = Vector2( 484.031, 717.128 )
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( -484.575, -719.814 )
rotation = 0.00321805
script = ExtResource( 3 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="GameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="start_game" from="HUD" to="." method="new_game"]
